<resources>
    <string name="app_name">Memes</string>
    <string name="auth_login_label_text">Логин</string>
    <string name="auth_password_label_text">Пароль</string>
    <string name="auth_error_text">Поле не может быть пустым</string>
    <string name="auth_login_btn">Войти</string>
    <string name="auth_not_valid_data_sb">Вы ввели неверные данные. Попробуйте ещё раз</string>
    <string name="auth_no_internet_sb">Отсутствует интернет-соединение\nПопробуйте позже</string>
    <string name="toolbar_title_text">Популярные мемы</string>
    <string name="memes_error_text">Не удалось загрузить ленту\nОбновите экран или попробуйте позже</string>
    <string name="share_meme_text">Поделиться мемом</string>
    <string name="meme_days_ago_text">дней назад</string>
    <string name="create_meme_btn">Создать</string>
    <string name="new_meme_title_hint">Заголовок</string>
    <string name="new_meme_description_hint">Описание</string>
    <string name="new_meme_error_title_text">Превышено кол-во символов в заголовке (max = 140)</string>
    <string name="new_meme_error_descr_text">Превышено кол-во символов в описании (max = 1000)</string>
    <string name="menu_about">О приложении</string>
    <string name="menu_logout">Выйти</string>
    <string name="no_user_memes_text">Нет собственных мемов</string>
    <string name="error_sb">Произошла непредвиденная ситуация\nПопробуйте позже</string>
    <string name="dialog_are_you_sure_title">Вы действительно хотите выйти?</string>
    <string name="dialog_logout_btn">Выйти</string>
    <string name="dialog_cancel_btn">Отмена</string>
    <string name="auth_phone_begin_et">\"+7 \"</string>
    <string name="new_meme_success">Новый мем успешно создан!</string>
    <string name="no_camera_permission">Нет разрешения на использование камеры!</string>
    <string name="request_camera_permission">Выдайте мне, пожалуйста, разрешнение на камеру :)</string>
</resources>
