<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".ui.activities.auth.AuthorizationActivity"
    android:focusableInTouchMode="true"
    android:id="@+id/login_main_layout">

    <studio.carbonylgroup.textfieldboxes.TextFieldBoxes
        android:id="@+id/login_tf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        style="@style/TextFields"
        app:labelText="@string/auth_login_label_text">

        <studio.carbonylgroup.textfieldboxes.ExtendedEditText
            android:id="@+id/login_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            style="@style/EditTexts"/>
    </studio.carbonylgroup.textfieldboxes.TextFieldBoxes>

    <studio.carbonylgroup.textfieldboxes.TextFieldBoxes
        android:id="@+id/password_tf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        style="@style/TextFields"
        app:labelText="@string/auth_password_label_text"
        android:layout_below="@+id/login_tf"
        app:endIcon="@drawable/ic_eye">

        <studio.carbonylgroup.textfieldboxes.ExtendedEditText
            android:id="@+id/password_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            style="@style/EditTexts"/>
    </studio.carbonylgroup.textfieldboxes.TextFieldBoxes>

    <Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/ripple_button"
        android:layout_margin="16dp"
        android:text="@string/auth_login_btn"
        android:textColor="@color/colorPrimary">
    </Button>

    <ProgressBar
        android:id="@+id/login_pb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:theme="@style/ProgressBar"
        android:layout_marginBottom="16dp"
        android:visibility="invisible"
        android:elevation="10dp">
    </ProgressBar>

</RelativeLayout>